--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,8 @@
  * Copyright (c) 2013, salesforce.com
  */
 
+@import "~/public/_buttons.scss";
+
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
