--- a/client/components/Navbar.css
+++ b/client/components/Navbar.css
@@ -17,7 +17,7 @@ nav.nav-bar {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 8vh;
+    height: 22px;
     margin: 0; padding: 0;
     background-color: ghostwhite;
     color: rgba(0, 0, 0, 0.9);
