--- a/client/components/Navbar.css
+++ b/client/components/Navbar.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Space+Mono');
 
 * {
-    font-family: 'Space Mono', Roboto, Questrial, Monospace, sans-serif;
+    font-family: 'Space Mono', 'Roboto Mono', Questrial, Monospace, sans-serif;
 }
 
 body {
