--- a/client/components/Navbar.css
+++ b/client/components/Navbar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Droid+Sans|Questrial');
+@import url('https://fonts.googleapis.com/css?family=Questrial');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Space+Mono');
 
 * {
@@ -18,7 +18,7 @@ nav.nav-bar {
     align-items: center;
     width: 100%;
     height: 22px;
-    margin: 0; padding: 0;
+    margin: 0; padding: 0.5rem 0;
     background-color: ghostwhite;
     color: rgba(0, 0, 0, 0.9);
     border-radius: 0 0 15px 15px;
@@ -27,8 +27,8 @@ nav.nav-bar {
 .logo {
     display: flex;
     align-items: center;
-    width: 7%;
-    height: 7%;
+    width: 4%;
+    height: 4%;
 }
 
 .logo:hover {
@@ -58,7 +58,7 @@ a {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    margin: 0; padding: 1rem;
+    margin: 0; padding: 0.5rem 0;
     background-color: black;
     color: #e0bd66;
 }
