--- a/client/components/Editor.css
+++ b/client/components/Editor.css
@@ -1,6 +1,6 @@
 nav.button-container {
     display: flex;
-    margin: 60px auto;
+    margin: 50px auto;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -9,8 +9,8 @@ button {
     font-family: Roboto, Helvetica, sans-serif;
     display: flex;
     overflow: hidden;
-    margin: 10px;
-    padding: 12px 12px;
+    /* margin: 2px; */
+    padding: 4px 4px;
     cursor: pointer;
     transition: all 150ms linear;
     text-align: center;
@@ -19,7 +19,7 @@ button {
     text-transform: capitalize;
 
     border: 0 none;
-    border-radius: 4px;
+    border-radius: 2px;
 
     font-size: 14px;
     font-weight: 500;
@@ -30,7 +30,7 @@ button {
     flex: 0 0 160px;
     flex-direction: column;
 
-    box-shadow: 2px 5px 10px #e4e4e4;
+    box-shadow: 2px 3px 6px #e4e4e4;
 }
 
 .regular {
@@ -89,12 +89,6 @@ button {
     background: #353866;
 }
 
-textarea {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
-    border: none;
-    resize: vertical;
+.title {
+    text-align: center;
 }
