--- a/public/assets/Buttons.css
+++ b/public/assets/Buttons.css
@@ -1,6 +1,6 @@
 nav.button-container {
     display: flex;
-    margin: 60px auto;
+    margin: 60px 0;
     flex-wrap: wrap;
     justify-content: center;
 }
@@ -41,6 +41,7 @@ button:hover {
   opacity: 1;
 }
 
+/*for more editor functionality (bold, etc.)*/
 button:active {
      background-color: #e0bd66;
      opacity: 1;
