--- a/public/assets/Buttons.css
+++ b/public/assets/Buttons.css
@@ -46,3 +46,9 @@ button:active {
      background-color: #e0bd66;
      opacity: 1;
 }
+
+.title {
+    margin: 0 100px;
+    text-align: center;
+    width: 80%;
+}
