--- a/public/assets/Components.css
+++ b/public/assets/Components.css
@@ -17,7 +17,7 @@ textarea {
     background-color: lightgray;
     display: inline;
     margin-left: 50px;
-    
+
 }
 
 .character {
@@ -40,5 +40,11 @@ textarea {
 .sceneNumber {
     vertical-align: middle;
     display: inline;
-    margin-left: 20px; 
+    margin-left: 20px;
+}
+
+h3 {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
 }
