--- a/public/assets/Buttons.css
+++ b/public/assets/Buttons.css
@@ -1,8 +1,17 @@
 nav.button-container {
     display: flex;
-    margin: 60px 0;
+    margin: 30px 0;
+    padding: 10px 0;
     flex-wrap: wrap;
     justify-content: center;
+    position: fixed;
+    width: 95%;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    background-color: white;
+    z-index: 10;
 }
 
 button {
@@ -10,7 +19,7 @@ button {
     display: flex;
     overflow: hidden;
     margin: 10px;
-    padding: 12px 12px;
+    padding: 6px 6px;
     cursor: pointer;
     transition: all 150ms linear;
     text-align: center;
@@ -27,7 +36,7 @@ button {
 
     justify-content: center;
     align-items: center;
-    flex: 0 0 160px;
+    flex: 0 0 120px;
     flex-direction: column;
 
     color: #202129;
@@ -54,6 +63,9 @@ button:active {
     font-size: 25px;
 }
 
+.scriptBox {
+    padding-top: 120px;
+}
 
 .demo {
     padding: 10%
