--- a/public/assets/Homepage.css
+++ b/public/assets/Homepage.css
@@ -10,13 +10,13 @@ body {
 
 nav.nav-bar {
     top: 0;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     position: fixed;
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 22px;
+    height: 25px;
     margin: 0; padding: 0.5rem 0;
     background-color: ghostwhite;
     color: rgba(0, 0, 0, 0.9);
@@ -38,6 +38,7 @@ nav.nav-bar {
 a {
     text-decoration: none;
     color: inherit;
+    margin: 0 30px;
 }
 
 a:hover {
