--- a/public/assets/Components.css
+++ b/public/assets/Components.css
@@ -30,13 +30,13 @@ textarea {
     position: center;
     text-align: center;
     font-size: 16px;
-    padding: 0;
+    margin: 0px, 100px; padding: 0px 0px;
 }
 
 .parenthetical {
     position: center;
     text-align: center;
-    padding: 0;
+    margin: 0px, 100px; padding: 0px 0px;
 }
 
 .dialogue {
