--- a/public/assets/Homepage.css
+++ b/public/assets/Homepage.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    margin: 0;
+    margin: 0; padding: 20px 0;
 }
 
 nav.nav-bar {
@@ -26,8 +26,7 @@ nav.nav-bar {
 .logo {
     display: flex;
     align-items: center;
-    width: 4%;
-    height: 4%;
+    width: 4%; height: 4%;
 }
 
 .logo:hover {
@@ -51,5 +50,5 @@ a.active {
 }
 
 span {
-    padding: 0 10px;
+    padding: 0 30px;
 }
