--- a/public/assets/Homepage.css
+++ b/public/assets/Homepage.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    margin: 0; padding: 20px 0;
+    margin: 0; padding: 30px;
 }
 
 nav.nav-bar {
@@ -26,7 +26,8 @@ nav.nav-bar {
 .logo {
     display: flex;
     align-items: center;
-    width: 4%; height: 4%;
+    width: 4%;
+    height: 4%;
 }
 
 .logo:hover {
@@ -50,5 +51,5 @@ a.active {
 }
 
 span {
-    padding: 0 30px;
+    padding: 0 10px;
 }
