--- a/public/assets/Screenplays.css
+++ b/public/assets/Screenplays.css
@@ -1,3 +1,12 @@
+.screenplays-header {
+    text-align: center;
+    margin: 0; padding: 0;
+}
+
+.list-of-screenplays {
+    padding: 10%
+}
+
 .input {
     display: inline;
 }
@@ -22,8 +31,4 @@ button.submit {
 
 .scriptBox {
     padding-top: 120px;
-}
-
-.list-of-screenplays {
-    padding: 10%
 }
