changed CTA to a button and fixed styling for that

--- a/public/assets/Homepage.css
+++ b/public/assets/Homepage.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial|Roboto+Mono|Space+Mono');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Space+Mono');
 
 * {
-    font-family: 'Space Mono', 'Roboto Mono', Questrial, Monospace, sans-serif;
+    font-family: 'Space Mono', 'Roboto Mono', Monospace, sans-serif;
 }
 
 body {
