--- a/public/assets/About.css
+++ b/public/assets/About.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Questrial');
+
 .about-container {
     margin-top: 20%;
     margin-left: 50%;
@@ -10,11 +12,11 @@
 }
 
 .start-button {
+    font-family: Questrial, sans-serif;
     font-size: 25px;
     color: #615858;
-    position: relative;
-    text-align: center;
-    padding-left: 10%;
+    padding: 0.7rem 0.9rem;
+    margin-left: 17%;
 }
 
 .logo-container {
