--- a/public/assets/Components.css
+++ b/public/assets/Components.css
@@ -30,18 +30,18 @@ textarea {
     position: center;
     text-align: center;
     font-size: 16px;
-    margin: 0 100px; padding: 0;
+    margin: 0px 100px; padding: 0px;
 }
 
 .parenthetical {
     position: center;
     text-align: center;
-    margin: 0 100px; padding: 0;
+    margin: 0px 100px; padding: 0px;
 }
 
 .dialogue {
     position: relative;
-    left: 15%;
+    left: 12%;
     max-width: 55%;
 }
 
@@ -55,7 +55,7 @@ textarea {
     visibility: hidden;
     width: 100px;
     background-color: rgba(247, 247, 247, 0.5);
-    color: #fff;
+    color: gray;
     text-align: center;
     padding: 2px 0;
     border-radius: 6px;
