--- a/public/assets/Buttons.css
+++ b/public/assets/Buttons.css
@@ -25,7 +25,7 @@ button {
     text-align: center;
     white-space: nowrap;
     text-decoration: none !important;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 
     border: 0 none;
     border-radius: 4px;
