--- a/public/assets/Buttons.css
+++ b/public/assets/Buttons.css
@@ -55,3 +55,12 @@ button:active {
      background-color: #e0bd66;
      opacity: 1;
 }
+
+.share {
+    padding-top: 5%;
+    margin-left: -8%;
+}
+
+.share hr {
+    margin-left: -10%;
+}
