--- a/public/assets/Screenplays.css
+++ b/public/assets/Screenplays.css
@@ -7,13 +7,18 @@
     padding: 10%
 }
 
-.input-container {
-    display: ruby;
-}
+.screenplay-item {
+    margin-left: 5px;
+    padding: 10px;
+} 
 
-button.submit {
+.input-container input {
     display: inline;
 }
+
+.input-container button {
+    display: inline;
+} 
 
 .title {
     margin-left: 5%;
@@ -28,7 +33,7 @@ button.submit {
     text-align: center;
     font-size: 16px;
     padding-bottom: 30px;
-    margin-right: 5%;
+    margin-right: 10%;
 }
 
 .scriptBox {
