--- a/public/assets/Homepage.css
+++ b/public/assets/Homepage.css
@@ -50,6 +50,12 @@ a.active {
     color: #feecab;
 }
 
+.authSelect {
+    display: flex;
+    align-items: right;
+    margin: 0px 20px;
+}
+
 span {
     padding: 0 10px;
 }
